<resources>
    <string name="app_name">FancyJoin</string>

    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google+</string>

    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    
    <string name="create_account">Create Account</string>
    <string name="username_or_email">Username or Email</string>
</resources>
